force-app/main/default/objects/custom_create69__c/custom_create69__c.object-meta.xml
<CustomObject>
    <label>Custom created object69</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects69</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>