force-app/main/default/objects/custom_create69__c/fields/custom_create_69field674__c.field-meta.xml
<CustomField>
    <fullName>custom_create_69field674__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 69field674</label>
    <type>Checkbox</type>
</CustomField>